; ModuleID = '/home/carl/AnghaBench/vlc/src/extr_missing.c_sout_AccessOutNew.c'
source_filename = "/home/carl/AnghaBench/vlc/src/extr_missing.c_sout_AccessOutNew.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [32 x i8] c"Output support not compiled-in!\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @sout_AccessOutNew(i32* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  %7 = load i8*, i8** %5, align 8
  %8 = call i32 @VLC_UNUSED(i8* %7)
  %9 = load i8*, i8** %6, align 8
  %10 = call i32 @VLC_UNUSED(i8* %9)
  %11 = load i32*, i32** %4, align 8
  %12 = call i32 @msg_Err(i32* %11, i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str, i64 0, i64 0))
  ret i32* null
}

declare dso_local i32 @VLC_UNUSED(i8*) #1

declare dso_local i32 @msg_Err(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
